<resources>
    <string name="app_name">LapakIkan</string>

    <!-- Ex -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_beranda">Beranda</string>
    <string name="nav_profile">Profil</string>
    <string name="nav_lapakku">LapakKu</string>
    <string name="nav_basket">Keranjang</string>
    <string name="nav_chat">Obrolan</string>
    <string name="nav_settings">Pengaturan</string>
    <string name="nav_about">Tentang Kami</string>
    <string name="nav_logout">Keluar</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Lapak Ikan</item>
        <item>Profil</item>
        <item>Lapak Ku</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
