<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/nav_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_beranda"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/nav_beranda" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/nav_profile" />

        <item
            android:id="@+id/nav_lapakku"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/nav_lapakku" />

        <item
            android:id="@+id/nav_pesan"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/nav_pesan" />

    </group>

    <item android:title="Lainnya">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/nav_settings" />

            <item
                android:id="@+id/nav_about"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/nav_about" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>